* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 cvs Classpath.  It was generated using the <a
 href="scripts/gen-classpath-compare"><code>gen-classpath-compare</code></a>
 script on
-2002-05-09.
+2002-06-11.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -258,7 +258,6 @@ differences are currently required.</p>
 <tr> <td>java.lang.ArithmeticException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.ArithmeticException.diff">Diff</a></td> </tr>
 <tr> <td>java.lang.ArrayIndexOutOfBoundsException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.ArrayIndexOutOfBoundsException.diff">Diff</a></td> </tr>
 <tr> <td>java.lang.ArrayStoreException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.ArrayStoreException.diff">Diff</a></td> </tr>
-<tr> <td>java.lang.AssertionError</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.AssertionError.diff">Diff</a></td> </tr>
 <tr> <td>java.lang.Boolean</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.Boolean.diff">Diff</a></td> </tr>
 <tr> <td>java.lang.Byte</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.Byte.diff">Diff</a></td> </tr>
 <tr> <td>java.lang.CharSequence</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.CharSequence.diff">Diff</a></td> </tr>
@@ -276,7 +275,6 @@ differences are currently required.</p>
 <tr> <td>java.lang.Double</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.Double.diff">Diff</a></td> </tr>
 <tr> <td>java.lang.EcosProcess</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.lang.Error</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.Error.diff">Diff</a></td> </tr>
-<tr> <td>java.lang.Exception</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.Exception.diff">Diff</a></td> </tr>
 <tr> <td>java.lang.ExceptionInInitializerError</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.ExceptionInInitializerError.diff">Diff</a></td> </tr>
 <tr> <td>java.lang.Float</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.Float.diff">Diff</a></td> </tr>
 <tr> <td>java.lang.IllegalAccessError</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.IllegalAccessError.diff">Diff</a></td> </tr>
@@ -310,14 +308,13 @@ differences are currently required.</p>
 <tr> <td>java.lang.PosixProcess</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.lang.Process</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.Process.diff">Diff</a></td> </tr>
 <tr> <td>java.lang.Runnable</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.Runnable.diff">Diff</a></td> </tr>
-<tr> <td>java.lang.Runtime</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td bgcolor="#eeeeaa">No</td> </tr>
+<tr> <td>java.lang.Runtime</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
 <tr> <td>java.lang.RuntimeException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.RuntimeException.diff">Diff</a></td> </tr>
 <tr> <td>java.lang.RuntimePermission</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.RuntimePermission.diff">Diff</a></td> </tr>
 <tr> <td>java.lang.SecurityException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.SecurityException.diff">Diff</a></td> </tr>
 <tr> <td>java.lang.SecurityManager</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.SecurityManager.diff">Diff</a></td> </tr>
 <tr> <td>java.lang.Short</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.Short.diff">Diff</a></td> </tr>
 <tr> <td>java.lang.StackOverflowError</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.StackOverflowError.diff">Diff</a></td> </tr>
-<tr> <td>java.lang.StackTraceElement</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.lang.String</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.lang.StringBuffer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.StringBuffer.diff">Diff</a></td> </tr>
 <tr> <td>java.lang.StringIndexOutOfBoundsException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.StringIndexOutOfBoundsException.diff">Diff</a></td> </tr>
@@ -326,7 +323,7 @@ differences are currently required.</p>
 <tr> <td>java.lang.ThreadDeath</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.ThreadDeath.diff">Diff</a></td> </tr>
 <tr> <td>java.lang.ThreadGroup</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.ThreadGroup.diff">Diff</a></td> </tr>
 <tr> <td>java.lang.ThreadLocal</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.ThreadLocal.diff">Diff</a></td> </tr>
-<tr> <td>java.lang.Throwable</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td bgcolor="#eeeeaa">No</td> </tr>
+<tr> <td>java.lang.Throwable</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
 <tr> <td>java.lang.UnknownError</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.UnknownError.diff">Diff</a></td> </tr>
 <tr> <td>java.lang.UnsatisfiedLinkError</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.UnsatisfiedLinkError.diff">Diff</a></td> </tr>
 <tr> <td>java.lang.UnsupportedClassVersionError</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.UnsupportedClassVersionError.diff">Diff</a></td> </tr>
@@ -447,61 +444,6 @@ differences are currently required.</p>
 <tr> <td>java.rmi.server.SkeletonNotFoundException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.rmi.server.SkeletonNotFoundException.diff">Diff</a></td> </tr>
 <tr> <td>java.rmi.server.SocketSecurityException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.rmi.server.SocketSecurityException.diff">Diff</a></td> </tr>
 <tr> <td>java.rmi.server.UnicastRemoteObject</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.rmi.server.UnicastRemoteObject.diff">Diff</a></td> </tr>
-<tr> <td>java.security.AccessControlException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.AccessControlException.diff">Diff</a></td> </tr>
-<tr> <td>java.security.AccessController</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.AccessController.diff">Diff</a></td> </tr>
-<tr> <td>java.security.AllPermission</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.AllPermission.diff">Diff</a></td> </tr>
-<tr> <td>java.security.BasicPermission</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.BasicPermission.diff">Diff</a></td> </tr>
-<tr> <td>java.security.Certificate</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.Certificate.diff">Diff</a></td> </tr>
-<tr> <td>java.security.CodeSource</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.CodeSource.diff">Diff</a></td> </tr>
-<tr> <td>java.security.DigestException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.DigestException.diff">Diff</a></td> </tr>
-<tr> <td>java.security.DigestOutputStream</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.DigestOutputStream.diff">Diff</a></td> </tr>
-<tr> <td>java.security.DomainCombiner</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.DomainCombiner.diff">Diff</a></td> </tr>
-<tr> <td>java.security.GeneralSecurityException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.GeneralSecurityException.diff">Diff</a></td> </tr>
-<tr> <td>java.security.Guard</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.Guard.diff">Diff</a></td> </tr>
-<tr> <td>java.security.GuardedObject</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.GuardedObject.diff">Diff</a></td> </tr>
-<tr> <td>java.security.InvalidAlgorithmParameterException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.InvalidAlgorithmParameterException.diff">Diff</a></td> </tr>
-<tr> <td>java.security.InvalidKeyException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.InvalidKeyException.diff">Diff</a></td> </tr>
-<tr> <td>java.security.InvalidParameterException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.InvalidParameterException.diff">Diff</a></td> </tr>
-<tr> <td>java.security.Key</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.Key.diff">Diff</a></td> </tr>
-<tr> <td>java.security.KeyException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.KeyException.diff">Diff</a></td> </tr>
-<tr> <td>java.security.KeyManagementException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.KeyManagementException.diff">Diff</a></td> </tr>
-<tr> <td>java.security.KeyStoreException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.KeyStoreException.diff">Diff</a></td> </tr>
-<tr> <td>java.security.MessageDigest</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.MessageDigest.diff">Diff</a></td> </tr>
-<tr> <td>java.security.NoSuchAlgorithmException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.NoSuchAlgorithmException.diff">Diff</a></td> </tr>
-<tr> <td>java.security.NoSuchProviderException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.NoSuchProviderException.diff">Diff</a></td> </tr>
-<tr> <td>java.security.Permission</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.Permission.diff">Diff</a></td> </tr>
-<tr> <td>java.security.PermissionCollection</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.PermissionCollection.diff">Diff</a></td> </tr>
-<tr> <td>java.security.Permissions</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.Permissions.diff">Diff</a></td> </tr>
-<tr> <td>java.security.Policy</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.Policy.diff">Diff</a></td> </tr>
-<tr> <td>java.security.Principal</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.Principal.diff">Diff</a></td> </tr>
-<tr> <td>java.security.PrivateKey</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.PrivateKey.diff">Diff</a></td> </tr>
-<tr> <td>java.security.PrivilegedAction</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.PrivilegedAction.diff">Diff</a></td> </tr>
-<tr> <td>java.security.PrivilegedActionException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.PrivilegedActionException.diff">Diff</a></td> </tr>
-<tr> <td>java.security.PrivilegedExceptionAction</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.PrivilegedExceptionAction.diff">Diff</a></td> </tr>
-<tr> <td>java.security.ProtectionDomain</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.ProtectionDomain.diff">Diff</a></td> </tr>
-<tr> <td>java.security.ProviderException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.ProviderException.diff">Diff</a></td> </tr>
-<tr> <td>java.security.PublicKey</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.PublicKey.diff">Diff</a></td> </tr>
-<tr> <td>java.security.SecureClassLoader</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.SecureClassLoader.diff">Diff</a></td> </tr>
-<tr> <td>java.security.SecurityPermission</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.SecurityPermission.diff">Diff</a></td> </tr>
-<tr> <td>java.security.SignatureException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.SignatureException.diff">Diff</a></td> </tr>
-<tr> <td>java.security.UnrecoverableKeyException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.UnrecoverableKeyException.diff">Diff</a></td> </tr>
-<tr> <td>java.security.UnresolvedPermission</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.UnresolvedPermission.diff">Diff</a></td> </tr>
-<tr> <td>java.security.acl.AclNotFoundException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.acl.AclNotFoundException.diff">Diff</a></td> </tr>
-<tr> <td>java.security.acl.LastOwnerException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.acl.LastOwnerException.diff">Diff</a></td> </tr>
-<tr> <td>java.security.acl.NotOwnerException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.acl.NotOwnerException.diff">Diff</a></td> </tr>
-<tr> <td>java.security.cert.CRLException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.cert.CRLException.diff">Diff</a></td> </tr>
-<tr> <td>java.security.cert.CertPath</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.security.cert.CertPathBuilderException</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.security.cert.CertPathValidatorException</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.security.cert.CertStoreException</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.security.cert.CertificateEncodingException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.cert.CertificateEncodingException.diff">Diff</a></td> </tr>
-<tr> <td>java.security.cert.CertificateException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.cert.CertificateException.diff">Diff</a></td> </tr>
-<tr> <td>java.security.cert.CertificateExpiredException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.cert.CertificateExpiredException.diff">Diff</a></td> </tr>
-<tr> <td>java.security.cert.CertificateFactory</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.cert.CertificateFactory.diff">Diff</a></td> </tr>
-<tr> <td>java.security.cert.CertificateNotYetValidException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.cert.CertificateNotYetValidException.diff">Diff</a></td> </tr>
-<tr> <td>java.security.cert.CertificateParsingException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.cert.CertificateParsingException.diff">Diff</a></td> </tr>
-<tr> <td>java.security.spec.InvalidKeySpecException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.spec.InvalidKeySpecException.diff">Diff</a></td> </tr>
-<tr> <td>java.security.spec.InvalidParameterSpecException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.spec.InvalidParameterSpecException.diff">Diff</a></td> </tr>
 <tr> <td>java.sql.BatchUpdateException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.sql.BatchUpdateException.diff">Diff</a></td> </tr>
 <tr> <td>java.sql.DataTruncation</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.sql.DataTruncation.diff">Diff</a></td> </tr>
 <tr> <td>java.sql.DatabaseMetaData</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.sql.DatabaseMetaData.diff">Diff</a></td> </tr>
@@ -545,7 +487,7 @@ differences are currently required.</p>
 <tr> <td>java.util.Random</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.util.Random.diff">Diff</a></td> </tr>
 <tr> <td>java.util.SimpleTimeZone</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.util.SimpleTimeZone.diff">Diff</a></td> </tr>
 <tr> <td>java.util.StringTokenizer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.util.StringTokenizer.diff">Diff</a></td> </tr>
-<tr> <td>java.util.TimeZone</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.util.TimeZone.diff">Diff</a></td> </tr>
+<tr> <td>java.util.TimerTask</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.util.TimerTask.diff">Diff</a></td> </tr>
 <tr> <td>java.util.TooManyListenersException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.util.TooManyListenersException.diff">Diff</a></td> </tr>
 <tr> <td>java.util.TreeMap</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.util.TreeMap.diff">Diff</a></td> </tr>
 <tr> <td>java.util.WeakHashMap</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.util.WeakHashMap.diff">Diff</a></td> </tr>
