Add new entries for 3.1:   i686-pc-interix3 (Interix 3.0 on Windows XP)   i686-pc-linux-gnu (Red Hat 7.3, glibc 2.2.5, kernel 2.4.18)

--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -214,6 +214,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i686-pc-interix3</td>
+<td>Interix 3.0 on Windows XP</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-06/msg00971.html">3.1</a></td>
+</tr>
+
+<tr>
 <td>i686-pc-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
@@ -317,7 +324,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01256.html">3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01585.html">3.1</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01721.html">3.1</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01721.html">3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-06/msg01062.html">3.1</a></td>
 </tr>
 
 <tr>
