Mention JDBC 3.0 update.

--- a/htdocs/gcc-3.2/changes.html
+++ b/htdocs/gcc-3.2/changes.html
@@ -101,6 +101,11 @@
 
 <h3>Java</h3>
 
+  <ul>
+    <li>The <code>java.sql</code> and <code>javax.sql</code> packages now 
+    implement the JDBC 3.0 (JDK 1.4) API. </li>
+  </ul>
+
 <h3>Fortran</h3>
 
 
