--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -74,6 +74,13 @@ can see the <a href="libgcj-classpath-compare.html">status of the merge</a>.)
 <!-- News entries start here -->
 
 <tr><td valign="top">
+<b>June 21, 2002</b>
+</td><td>
+The <code>java.sql</code> and <code>javax.sql</code> packages were updated
+by Bryce McKinlay to implement the JDBC 3.0 (JDK 1.4) API. </li>
+</td></tr>
+
+<tr><td valign="top">
 <b>June 11, 2002</b>
 </td><td>
 Tom Tromey has implemented the JDK 1.4 <code>assert</code> facility.
