Add entry for vax-dec-ultrix4.3; this one includes a link to the message.

--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -244,5 +244,9 @@ Successful</p>
 <p><b>sparc-unknown-linux-gnu</b><br />
 Successful</p>
 
+<p><b>vax-dec-ultrix4.3</b><br />
+Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-06/msg01383.html">2.95.3</a></p>
+
 </body>
 </html>
