* Remove ns32k from the "obsolete" section. * Reformat the "individual systems are obsolete" section,   and add a case for ns32k-*-openbsd*.

--- a/htdocs/gcc-3.2/changes.html
+++ b/htdocs/gcc-3.2/changes.html
@@ -146,14 +146,20 @@
   <ul>
     <li>Matsushita MN10200, <code>mn10200-*-*</code></li>
     <li>Motorola 88000, <code>m88k-*-*</code></li>
-    <li>National Semiconductor 32000, <code>ns32k-*-*</code></li>
     <li>IBM ROMP, <code>romp-*-*</code>
   </ul>
 
   <p>Also, some individual systems have been obsoleted:</p>
 
   <ul>
-    <li>MIPS/SINIX, <code>mips-sni-sysv4</code></li>
+    <li>MIPS
+      <ul>
+	<li>SINIX, <code>mips-sni-sysv4</code></li>
+      </ul></li>
+    <li>National Semiconductor 32000
+      <ul>
+	<li>OpenBSD, <code>ns32k-*-openbsd*</code></li>
+      </ul></li>
   </ul>
 
 
