Mention assert facility

--- a/htdocs/gcc-3.2/changes.html
+++ b/htdocs/gcc-3.2/changes.html
@@ -104,6 +104,9 @@
   <ul>
     <li>The <code>java.sql</code> and <code>javax.sql</code> packages now 
     implement the JDBC 3.0 (JDK 1.4) API. </li>
+
+    <li>The JDK 1.4 <code>assert</code> facility has been
+    implemented.</li>
   </ul>
 
 <h3>Fortran</h3>
