Update branch information for SIMPLE and tree-ssa work.

--- a/htdocs/projects/tree-ssa/index.html
+++ b/htdocs/projects/tree-ssa/index.html
@@ -10,10 +10,22 @@
 optimization</a> project.  The goal is to build an optimization framework
 for trees based on the Static Single Assignment (SSA) form [<a
 href="#cytron.ea-91">1</a>].  The implementation currently lives in the
-<code>ast-optimizer-branch</code> branch.</p>
+<code>tree-ssa-20020619-branch</code> branch.</p>
 
-<p>Please contact <a href="mailto:dnovillo@redhat.com">Diego Novillo
-&lt;dnovillo@redhat.com&gt;</a> if you are interested in contributing.</p>
+<h3>Contributing</h3>
+
+<p>Checkout the <code>tree-ssa-20020619-branch</code> branch
+following the instructions found in the <a
+href="../../cvs.html">CVS documentation</a>.</p>
+
+<p>When posting to the development lists, please mark messages and patches with
+<code>[tree-ssa-branch]</code> in the subject.  As this is a branch, and not
+the mainline, the usual maintainer rules do not apply.  This branch is
+maintained by <a href="mailto:dnovillo@redhat.com">Diego Novillo
+&lt;dnovillo@redhat.com&gt;</a>.  Approval from the usual maintainers will be
+needed when submitting patches from the branch onto the mainline.</p>
+
+<hr />
 
 <h2>Table of Contents</h2>
 
