Add entries for 3.1:   i686-pc-cygwin (Cygwin 1.3.10, Windows NT 4.0)   sparc-sun-solaris2.9

--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -195,6 +195,13 @@ Installing GCC: Final Installation</a>.</p>
 <tr>
 <td>i686-pc-cygwin</td>
 <td>Cygwin 1.3.10, Windows NT 4.0</td>
+<td>Successful (C, C++, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2002-06/msg01425.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-cygwin</td>
+<td>Cygwin 1.3.10, Windows NT 4.0</td>
 <td>Partially successful (Ada, C, C++, Java, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01761.html">3.1</a></td>
 </tr>
@@ -561,6 +568,13 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00621.html">3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00633.html">3.1</a>
 </td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.9</td>
+<td>&nbsp;</td>
+<td>Successful (C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2002-06/msg01484.html">3.1</a></td>
 </tr>
 
 <tr>
