libgcj interpreter now direct threaded

--- a/htdocs/gcc-3.2/changes.html
+++ b/htdocs/gcc-3.2/changes.html
@@ -107,6 +107,9 @@
 
     <li>The JDK 1.4 <code>assert</code> facility has been
     implemented.</li>
+
+    <li>The bytecode interpreter is now direct threaded and thus
+    faster.</li>
   </ul>
 
 <h3>Fortran</h3>
