--- a/htdocs/gcc-3.2/changes.html
+++ b/htdocs/gcc-3.2/changes.html
@@ -114,6 +114,11 @@
 
 <h3>Fortran</h3>
 
+  <ul>
+    <li>Fortran improvements are listed in              
+    <a href="http://gcc.gnu.org/onlinedocs/g77_news.html">
+    the Fortran documentation</a>.</li>
+  </ul>
 
 <h2>New Targets and Target Specific Improvements</h2>
 
