--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -221,6 +221,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i686-pc-cygwin</td>
+<td>Cygwin 1.3.10, Windows XP Pro 5.1</td>
+<td>Successful (C, C++, Java, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2002-06/msg01530.html">3.1</a></td>
+</tr>
+
+<tr>
 <td>i686-pc-interix3</td>
 <td>Interix 3.0 on Windows XP</td>
 <td>Successful:
@@ -575,6 +582,13 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Successful (C, C++):
 <a href="http://gcc.gnu.org/ml/gcc/2002-06/msg01484.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.9</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-06/msg01534.html">3.1</a></td>
 </tr>
 
 <tr>
