--- a/htdocs/projects/cpplib.html
+++ b/htdocs/projects/cpplib.html
@@ -10,21 +10,12 @@
 <p>cpplib has largely been completed, and is stable at this point.
 For GCC versions 3.0 and later, it is linked into the C, C++ and
 Objective C front ends.  Most future work will relate to character set
-issues, integrating the traditional preprocessor, performance
-enhancements, and improving cpplib as a stand-alone library.</p>
-
-<p>Bug reports for code which must be compiled with <code>gcc
--traditional</code> are of interest, but much lower priority than
-standard conforming C/C++.  Traditional mode is implemented by a
-separate program, not by cpplib.  Oh, and the lack of support for
-varargs macros in traditional mode is a deliberate feature.</p>
+issues, performance enhancements and improving cpplib as a stand-alone
+library.</p>
 
 <h2>Work recently completed</h2>
 
 <ol>
-  <li>Updates so that cpplib works correctly on VMS have been contributed
-      by Douglas Rupp.</li>
-
   <li>Stand-alone CPP is dead.  The compiler front end now handles
       preprocessed output if necessary.</li>
 
@@ -34,6 +25,11 @@ varargs macros in traditional mode is a deliberate feature.</p>
 
   <li>CPP arithmetic is now done to the correct target precision, based
       upon the selected language standard.</li>
+
+  <li>The traditional preprocessor has been integrated into cpplib.
+      At present it is an output-only preprocessor, but it should be
+      fairly simple to modify cpplib so that traditional preprocessing
+      and then tokenization are performed in one invocation.</li>
 </ol>
 
 <h2>Greater Coordination with the Front Ends</h2>
@@ -78,20 +74,13 @@ after thought, which is not entirely coincidental.
       strings, and we could simplify the parsers a little too.</li>
 </ol>
 
-<h2>Other internal work that needs doing</h2>
+<h2>Potential minor improvements</h2>
 
 <ol>
   <li>The file-handling code allocates lots of items with xmalloc.
       The rest of cpplib is now reasonably efficient in its use of
       memory; minor improvements are certainly still possible.</li>
 
-  <li>The traditional preprocessor needs integrating into cpplib.
-      I'm working on this at the moment.</li>
-</ol>
-
-<h2>Optimizations</h2>
-
-<ol>
   <li>There might be room for further improvement of macro expansion
       performance, although it is now pretty good.  For example, we
       currently pre-expand each argument (if necessary) into its own
