Obsolete VAX/VMS for gcc 3.2. Modified: gcc-3.2/changes.html

--- a/htdocs/gcc-3.2/changes.html
+++ b/htdocs/gcc-3.2/changes.html
@@ -172,6 +172,10 @@
       <ul>
 	<li>OpenBSD, <code>ns32k-*-openbsd*</code></li>
       </ul></li>
+    <li>VAX
+      <ul>
+        <li>VMS, <code>vax-*-vms*</code></li>
+      </ul></li>
   </ul>
 
 
