Bison *is* needed, even with contrib/gcc_update.

--- a/htdocs/snapshots.html
+++ b/htdocs/snapshots.html
@@ -28,9 +28,9 @@ patch does not support "-E", you'll need to get a newer version.  Also note
 that you may need autoconf, autoheader and various other programs if you use
 diff files to update from one snapshot to the next.</p>
 
-<p>contrib/gcc_update can be used to apply diffs between successive
-snapshot versions and preserve relations between generated files so
-that autoconf, bison et al aren't needed. This is documented in
+<p><code>contrib/gcc_update</code> can be used to apply diffs between
+successive snapshot versions and preserve relations between generated
+files so that autoconf et al aren't needed. This is documented in
 comments in contrib/gcc_update. <br /> The file .brik provides a list of
 checksums of files in the snapshot, that may be checked using<br />
 brik -C &lt; .brik</p>
