--- a/htdocs/java/docs.html
+++ b/htdocs/java/docs.html
@@ -22,6 +22,7 @@
 
 
     <ul>
+      <li><a href="http://gcc.gnu.org/onlinedocs/gcj/">GCJ Manual</a>.</li>
       <li>General <a href="gcj2.html">gcj</a> information.</li>
       <li>General <a href="libgcj2.html">runtime</a> information.</li>
       <li>How to <a href="compile.html">compile</a> a Java program.</li>
