--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -649,12 +649,10 @@ $ ../configure [...]
       <h3><a name="6_2">6.2 Is it possible to invoke GCJ compiled Java code from a C++ application?</a></h3>
       <dl>
         <dd>
-          <p>Yes, the current GCJ 3.1 development sources support a CNI-based 
-          invocation interface as well as the traditional JNI invocation API. </p>
-          
-          <p>CNI code just needs to call <code>JvCreateJavaVM()</code> and 
-          <code>JvAttachCurrentThread()</code> before making any Java calls.
-          See <a href="http://gcc.gnu.org/ml/java-patches/2001-q2/msg00224.html">here</a> 
+          <p>Yes, GCJ 3.1 supports a CNI-based invocation interface as well as 
+	  the traditional JNI invocation API. </p>
+
+          See the <a href="http://gcc.gnu.org/onlinedocs/gcj/Invocation.html">GCJ Manual</a> 
           for more details on how to use the CNI interface. </p>
         </dd>
       </dl>
