--- a/htdocs/projects/beginner.html
+++ b/htdocs/projects/beginner.html
@@ -1083,6 +1083,8 @@ huge (432KB on i386).</p>
 <p>Here's some dialogue on the subject, which unfortunately may only
 confuse you.</p>
 
+<verbatim> <--! Work around a MetaHTML 5.091 bug, where div is considered a builtin. -->
+
 <blockquote>
 <div>Michael Meissner:</div>
 <div style="border-left: solid blue; padding-left: 4pt">
@@ -1112,6 +1114,9 @@ The comment above hash_scan_insn claims it doesn't handle clobbers in
 parallels, yet the code appears to.
 </div>
 </blockquote>
+
+</verbatim> <--! Work around a MetaHTML 5.091 bug, where div is considered a builtin. -->
+
 </li>
 
 <li>Teach the combiner to delete no-op moves it generates.
