--- a/htdocs/projects/beginner.html
+++ b/htdocs/projects/beginner.html
@@ -1083,7 +1083,7 @@ huge (432KB on i386).</p>
 <p>Here's some dialogue on the subject, which unfortunately may only
 confuse you.</p>
 
-<verbatim> <--! Work around a MetaHTML 5.091 bug, where div is considered a builtin. -->
+<verbatim> <!-- Work around a MetaHTML 5.091 bug, where div is considered a builtin. -->
 
 <blockquote>
 <div>Michael Meissner:</div>
@@ -1115,7 +1115,7 @@ parallels, yet the code appears to.
 </div>
 </blockquote>
 
-</verbatim> <--! Work around a MetaHTML 5.091 bug, where div is considered a builtin. -->
+</verbatim> <!-- Work around a MetaHTML 5.091 bug, where div is considered a builtin. -->
 
 </li>
 
