--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -98,7 +98,7 @@ is: Autoconf, Bison, Xgettext, Automake, and Gperf.</p>
 
 <p>It is not uncommon to get CVS conflict messages for some generated files
 when updating your local sources from the CVS repository.  Typically such
-conflicts occur with bison or autoconf generated files.</p>
+conflicts occur with autoconf generated files.</p>
 
 <p>As long as you haven't been making modifications to the generated files
 or the generator files, it is safe to delete the offending file, then run
