Do not force guest user and password for GNATS login. By Kelley Cook <kelley.r.cook@gm.com>.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -86,7 +86,7 @@
 <tr bgcolor="#FFFFBB"><td>
 <p>
 <a href="bugs.html">Report a bug</a><br />
-<a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;user=guest&amp;password=guest&amp;cmd=login">GNATS</a><br />
+<a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl">GNATS</a><br />
 <a href="gnatswrite.html">...write access</a><br />
 <a href="bugs.html#known">Known bugs</a>
 </p>
