--- a/htdocs/extensions.html
+++ b/htdocs/extensions.html
@@ -20,11 +20,10 @@ controllers.</p>
 <p>A GCC Machine Description for the DLX machine described in Computer
 Architecture: A Quantitative Approach by Hennessy and Patterson.</p>
 
-<h2><a href="http://home.worldnet.fr/~stcarrez/m68hc11_port.html">M68HC11
-port</a></h2>
+<h2><a href="http://www.gnu-m68hc11.org">M68HC11/M68HC12 port</a></h2>
 <p>This is a port of GCC, GDB and the Binutils for Motorola 68HC11
-(later 68HC12). This port supports 8,16,32 and 64-bits integers
-as well as 32 and 64-bits floats. It uses ELF32 for object files and
+and 68HC12. This port supports 8,16,32 and 64-bit integers
+as well as 32 and 64-bit floats. It uses ELF32 for object files and
 DWARF-2 for debugging information.</p>
 
 <h2><a href="http://pdp10.nocrew.org/gcc/">PDP-10 port</a></h2>
