GCC mainline is now in stage 2.

--- a/htdocs/develop.html
+++ b/htdocs/develop.html
@@ -100,12 +100,12 @@ well), then we can seriously confuse users.</p>
 <p>Development on our main branch will proceed in three stages.  Each
 stage will be two months in length.</p>
 
-<h4>Stage 1</h4>
+<h4><a name="stage1">Stage 1</a></h4>
 
 <p>During this period, changes of any nature may be made to the
 compiler.  In particular, major changes may be merged from branches.</p>
 
-<h4>Stage 2</h4>
+<h4><a name="stage2">Stage 2</a></h4>
 
 <p>During this period, major changes may not be merged from branches.
 However, other smaller improvements may be made.  For example, support
@@ -113,7 +113,7 @@ for a new language construct might be added in a front-end, or support
 for a new variant of an existing microprocessor might be added to a
 back-end.</p>
 
-<h4>Stage 3</h4>
+<h4><a name="stage3">Stage 3</a></h4>
 
 <p>During this period, the only (non-documentation) changes that may be
 made are changes that fix bugs.  New functionality may not be introduced
