--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -166,7 +166,7 @@ and automated testers</a> to maintain and improve quality.</p>
 <dt><strong>Active development (mainline):</strong>
   will become GCC 3.2
 </dt><dd>
-  Open for all maintainers.
+  <a href="develop.html#stage2">Stage 2</a>; open for all maintainers.
 </dd>
 </dl>
 
