2002-07-08  Phil Edwards  <pme@gcc.gnu.org>
	* download.html, footer.ihtml, header.ihtml:  Removed files.
	* index.html, status.html, thanks.html:  Update to match.

--- a/htdocs/libstdc++/index.html
+++ b/htdocs/libstdc++/index.html
@@ -6,7 +6,40 @@
 </head>
 <body>
 
-<!--#include virtual="/libstdc++/header.ihtml"-->
+<!-- ####################################################### -->
+<!-- Encloses everything. :-(  First row is the sigil; second row
+     is the rest of the page (which is another table, blech).  That
+     second row contains two elements; the first is the TOC (in gray)
+     and the second is another table (hork).  That second table
+     contains the actual "text" of the page.
+-->
+<table>
+  <tr><td valign="top" align="left">
+  <p><span class="tocheader">libstdc++</span> v3</p>
+  </td></tr><tr><td valign="top" bgcolor="#EEEEEE">
+
+<!-- TOC (Navigation bar thingy) -->
+<table cellspacing="10">
+    <tr><td colspan="2"></td></tr>
+
+    <tr><td colspan="2">
+    <a href="index.html">Home</a><br />
+    <a href="status.html">Status</a><br />
+    <a href="http://gcc.gnu.org/onlinedocs/libstdc++/faq/index.html">FAQ</a>
+(<a href="http://gcc.gnu.org/onlinedocs/libstdc++/faq/index.txt">text</a>)<br />
+    <a href="http://gcc.gnu.org/onlinedocs/libstdc++/documentation.html">Documentation</a><br />
+    <a href="../lists.html">Mailing Lists</a><br />
+    <a href="thanks.html">Contributors</a><br />
+    <a href="../readings.html">Links</a><br />
+    </td></tr>
+
+</table></td><td></td><td>
+    <!-- Why another table for the actual stuff?  See JSM's insightful
+         comments in the source of sources.redhat.com.
+     -->
+    <table><tr><td>
+
+<!-- ####################################################### -->
 
 
 <h2>What... is your name?</h2>
@@ -39,13 +72,11 @@
 <h3>News</h3>
 
 <dl>
-<!--
- <dt>2002-05-??</dt>
- <dd> <a href="http://gcc.gnu.org/gcc-3.1/">GCC 3.1</a> released.</dd>
--->
+ <dt>2002-05-15</dt>
+ <dd> <a href="http://gcc.gnu.org/gcc-3.1/">GCC 3.1</a> released,
+   containing all previous snapshot work (and more).</dd>
  <dt>2002-03-05</dt>
- <dd> Fourteenth snapshot release,
-   <a href="download.html">libstdc++-v3.0.97</a>.</dd>
+ <dd> Fourteenth snapshot release, libstdc++-v3.0.97.</dd>
  <dt>2002-02-01</dt>
  <dd>A
    <a href="http://gcc.gnu.org/ml/libstdc++/2002-02/msg00003.html">call
@@ -93,7 +124,29 @@
  <dd> First snapshot release.</dd>
 </dl>
 
+<hr />
 
-<!--#include virtual="/libstdc++/footer.ihtml"-->
+<h3>Downloading</h3>
+
+<p>Snapshots are located in the GCC FTP area, in the libstdc++ subdirectory,
+   <code>&lt;URL:ftp://gcc.gnu.org/pub/gcc/libstdc++/&gt;</code>.  You will
+   probably need to use one of the
+   <a href="http://gcc.gnu.org/mirrors.html">GCC mirror sites</a> due to
+   the heavy load on the main server.
+</p>
+
+<p>See <a href="status.html">the status page</a> before downloading, so that
+   you know which files are the correct snapshots to download.
+</p>
+
+<p>The CVS source repository is part of the GCC repository.  Instructions
+   for anonymous CVS access are the same as
+   <a href="../cvs.html">those for the rest of the compiler</a>.  Checking
+   out the <code>gcc</code> module will also get the library sources; to
+   retrieve only the library, check out the <code>libstdc++-v3</code> module
+   instead.
+
+</td></tr></table></td></tr></table>
+
 </body>
 </html>
