--- a/htdocs/libstdc++/status.html
+++ b/htdocs/libstdc++/status.html
@@ -6,25 +6,65 @@
 </head>
 <body>
 
-<!--#include virtual="/libstdc++/header.ihtml"-->
+<!-- ####################################################### -->
+<!-- Encloses everything. :-(  First row is the sigil; second row
+     is the rest of the page (which is another table, blech).  That
+     second row contains two elements; the first is the TOC (in gray)
+     and the second is another table (hork).  That second table
+     contains the actual "text" of the page.
+-->
+<table>
+  <tr><td valign="top" align="left">
+  <p><span class="tocheader">libstdc++</span> v3</p>
+  </td></tr><tr><td valign="top" bgcolor="#EEEEEE">
+
+<!-- TOC (Navigation bar thingy) -->
+<table cellspacing="10">
+    <tr><td colspan="2"></td></tr>
+
+    <tr><td colspan="2">
+    <a href="index.html">Home</a><br />
+    <a href="status.html">Status</a><br />
+    <a href="http://gcc.gnu.org/onlinedocs/libstdc++/faq/index.html">FAQ</a>
+(<a href="http://gcc.gnu.org/onlinedocs/libstdc++/faq/index.txt">text</a>)<br />
+    <a href="http://gcc.gnu.org/onlinedocs/libstdc++/documentation.html">Documentation</a><br />
+    <a href="../lists.html">Mailing Lists</a><br />
+    <a href="thanks.html">Contributors</a><br />
+    <a href="../readings.html">Links</a><br />
+    </td></tr>
+
+</table></td><td></td><td>
+    <!-- Why another table for the actual stuff?  See JSM's insightful
+         comments in the source of sources.redhat.com.
+     -->
+    <table><tr><td>
+
+<!-- ####################################################### -->
 
 
-<h3>Status</h3>
-
+<h2>Status</h2>
 <hr />
-<p>For release 3.0.95, two tarballs are available.  The first,
-   <a href="download.html">libstdc++-v3.0.95-gcc-3.1.x.tar.gz</a>, is for
-   use with current dvelopment GCC (and the 3.1 branch, a few months from
-   now).  The second,
-   <a href="download.html">libstdc++-v3.0.95-gcc-3.0.3.tar.gz</a>, is for
-   use with GCC 3.0.3+.  In either case, the build instructions (see the
+
+<h3>GCC 3.1</h3>
+
+<p><strong>If you have GCC 3.1, STOP.</strong>  You have the latest
+   libstdc++ available.  Once we release another snapshot, this page will
+   be updated.
+</p>
+
+<h3>GCC 3.0</h3>
+
+<p>For snapshot 3.0.97, two tarballs are available.  The first,
+   libstdc++-v3.0.97-gcc-3.1.x.tar.gz, is for use with GCC 3.1.  The second,
+   libstdc++-v3.0.97-gcc-3.0.3.tar.gz, is for use with GCC 3.0.3+.  In
+   either case, the build instructions (see the
    README after downloading and unpacking) are unchanged.
 </p>
 
 <p>If you are using GCC 3.0.[012], then the libstdc++-v3 which ships with 
    that compiler should be used.  It is stable and backwards-compatible.
    With 3.0.3, you can use the stable (shipped) version, or you can download
-   the one above.
+   the snapshot above.
 </p>
 
 <p><strong>Attention!</strong> The library snapshot for GCC 3.0.3 above is
@@ -40,8 +80,8 @@
    including its default libstdc++-v3.  If you want major changes everywhere,
    then just use the CVS compiler.  :-)
 </p>
-<hr />
 
+<!--
 <p>Compiling this library requires sources of a recent version of GCC.
    We suggest using CVS GCC.  The latest library snapshot has also been
    tested with this recent GCC snapshot:  <strong>2002-01-28</strong>,
@@ -50,44 +90,26 @@
    snapshots directory as &quot;2002-01-28/gcc[-g++]-20020128.tar.gz&quot;,
    or via CVS using the &quot;gcc_ss_20020128&quot; checkout tag.
 </p>
+-->
+
+<h3>GCC 2.x</h3>
 
 <p>The most recent version of this library that will build with
    <a href="../gcc-2.95/">GCC 2.95.2</a>
-   is the ninth snapshot release,
-   <a href="download.html">libstdc++-2.90.8.tar.gz</a>.
+   is the ninth snapshot release, libstdc++-2.90.8.tar.gz.
 </p>
 
 <p>If you are using
    <a href="../gcc-2.95/">GCC 2.95.3</a>,
    then the most recent usable version of this library is <em>still</em>
-   the ninth snapshot release,
-   <a href="download.html">libstdc++-2.90.8.tar.gz</a>, <em>and</em> you
+   the ninth snapshot release, libstdc++-2.90.8.tar.gz, <em>and</em> you
    will need to apply
    <a href="libstdc++-2.90.8-compat-gcc-2.95.3.diff">this patch</a> to
    mirror the changes made in gcc/glibc.
 </p>
 
-<p>New things that work are in the latest
-   <a href="http://gcc.gnu.org/onlinedocs/libstdc++/17_intro/RELEASE-NOTES">release notes</a>.
-</p>
 
-<p>Known problems and bugs, which will force us to actually keep this
-   file up-to-date, can be found in <a
-   href="http://gcc.gnu.org/onlinedocs/libstdc++/17_intro/BUGS">bugs</a>.
-</p>
+</td></tr></table></td></tr></table>
 
-<p>Things that need to be done and are looking for volunteers can be found in:
-   <a href="http://gcc.gnu.org/onlinedocs/libstdc++/17_intro/TODO">pick me</a>.
-</p>
-
-<p>Working platforms are listed
-   <a href="../gcc-3.0/buildstat.html">here</a>, and test
-   results can be found
-   <a href="http://gcc.gnu.org/ml/gcc-testresults/">here</a> and
-   <a href="http://people.redhat.com/geoffk/gcc-regression/">here</a>.
-</p>
-
-
-<!--#include virtual="/libstdc++/footer.ihtml"-->
 </body>
 </html>
