--- a/htdocs/libstdc++/thanks.html
+++ b/htdocs/libstdc++/thanks.html
@@ -6,8 +6,40 @@
 </head>
 <body>
 
-<!--#include virtual="/libstdc++/header.ihtml"-->
+<!-- ####################################################### -->
+<!-- Encloses everything. :-(  First row is the sigil; second row
+     is the rest of the page (which is another table, blech).  That
+     second row contains two elements; the first is the TOC (in gray)
+     and the second is another table (hork).  That second table
+     contains the actual "text" of the page.
+-->
+<table>
+  <tr><td valign="top" align="left">
+  <p><span class="tocheader">libstdc++</span> v3</p>
+  </td></tr><tr><td valign="top" bgcolor="#EEEEEE">
 
+<!-- TOC (Navigation bar thingy) -->
+<table cellspacing="10">
+    <tr><td colspan="2"></td></tr>
+
+    <tr><td colspan="2">
+    <a href="index.html">Home</a><br />
+    <a href="status.html">Status</a><br />
+    <a href="http://gcc.gnu.org/onlinedocs/libstdc++/faq/index.html">FAQ</a>
+(<a href="http://gcc.gnu.org/onlinedocs/libstdc++/faq/index.txt">text</a>)<br />
+    <a href="http://gcc.gnu.org/onlinedocs/libstdc++/documentation.html">Documentation</a><br />
+    <a href="../lists.html">Mailing Lists</a><br />
+    <a href="thanks.html">Contributors</a><br />
+    <a href="../readings.html">Links</a><br />
+    </td></tr>
+
+</table></td><td></td><td>
+    <!-- Why another table for the actual stuff?  See JSM's insightful
+         comments in the source of sources.redhat.com.
+     -->
+    <table><tr><td>
+
+<!-- ####################################################### -->
 
 
 <h2 class="centered">Contributors</h2>
@@ -149,8 +181,8 @@
 <p>It couldn't be done without you!</p>
 
 
+</td></tr></table></td></tr></table>
 
-<!--#include virtual="/libstdc++/footer.ihtml"-->
 </body>
 </html>
 
