--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -46,6 +46,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>alphaev56-unknown-linux-gnu</td>
+<td>Red Hat 7.1, glibc 2.2.3, kernel 2.4.3</td>
+<td>Successful (C, C++, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2002-06/msg01748.html">3.1</a></td>
+</tr>
+
+<tr>
 <td>alphaev6-dec-osf4.0f</td>
 <td>&nbsp;</td>
 <td>Successful (C, C++, F77):
@@ -106,6 +113,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i386-unknown-freebsd4.5</td>
+<td>&nbsp;</td>
+<td>Successful (C):
+<a href="http://gcc.gnu.org/ml/gcc/2002-07/msg00209.html">3.1</a></td>
+</tr>
+
+<tr>
 <td>i386-unknown-openbsd</td>
 <td>&nbsp;</td>
 <td>Successful (Ada, C, C++, F77, Java, Obj-C):
@@ -117,6 +131,13 @@ Installing GCC: Final Installation</a>.</p>
 <td>GNU as 1.92.3, openbsd ld</td>
 <td>Unsuccessful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01335.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>i586-pc-linux-gnu</td>
+<td>Slackware 8.1, glibc 2.2.5, kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-07/msg00338.html">3.1</a></td>
 </tr>
 
 <tr>
@@ -225,6 +246,13 @@ Installing GCC: Final Installation</a>.</p>
 <td>Cygwin 1.3.10, Windows XP Pro 5.1</td>
 <td>Successful (C, C++, Java, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2002-06/msg01530.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-cygwin</td>
+<td>Cygwin 1.3.11-3, Windows XP Pro 5.1</td>
+<td>Successful (C, C++, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2002-06/msg01741.html">3.1</a></td>
 </tr>
 
 <tr>
