--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -250,6 +250,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-cygwin</td>
+<td>Cygwin 1.3.11, Windows 98SE</td>
+<td>Successful (C, C++, F77):
+<a href="http://gcc.gnu.org/ml/gcc/2002-07/msg00387.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-cygwin</td>
 <td>Cygwin 1.3.11-3, Windows XP Pro 5.1</td>
 <td>Successful (C, C++, Java):
 <a href="http://gcc.gnu.org/ml/gcc/2002-06/msg01741.html">3.1</a></td>
