Add entry for 3.0 for alphaev56-dec-osf4.0c.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -99,6 +99,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>alphaev56-dec-osf4.0c</td>
+<td>&nbsp;</td>
+<td>Successful (C, C++, F77):
+<a href="http://gcc.gnu.org/ml/gcc/2002-07/msg00427.html">3.0</a></td>
+</tr>
+
+<tr>
 <td>alphaev56-dec-osf4.0d</td>
 <td>&nbsp;</td>
 <td>Successful:
