--- a/htdocs/gcc-3.2/changes.html
+++ b/htdocs/gcc-3.2/changes.html
@@ -31,6 +31,11 @@
 	attribute.  Note that all functions for which GCC has a
 	built-in <code>format</code> attribute, an appropriate
 	built-in <code>nonnull</code> attribute is also applied.</li>
+
+    <li>The DWARF (version 1) debugging format has been deprecated and 
+        will be removed in a future version of GCC.  Version 2 of the 
+	DWARF debugging format will continue to be supported for the
+        forseeable future.</li>
   </ul>
 
 
