--- a/htdocs/libstdc++/index.html
+++ b/htdocs/libstdc++/index.html
@@ -126,7 +126,7 @@
 
 <hr />
 
-<h3>Downloading</h3>
+<a name="download"><h3>Downloading</h3></a>
 
 <p>Snapshots are located in the GCC FTP area, in the libstdc++ subdirectory,
    <code>&lt;URL:ftp://gcc.gnu.org/pub/gcc/libstdc++/&gt;</code>.  You will
