Add 3.1 entries:   i386-unknown-freebsd4.5   i586-pc-linux-gnu (Red Hat 7.1, glibc 2.2.2, kernel 2.4.17)   powerpc-ibm-aix4.1.5.0

--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -120,6 +120,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i386-unknown-freebsd4.5</td>
+<td>&nbsp;</td>
+<td>Successful (C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2002-07/msg00593.html">3.1</a></td>
+</tr>
+
+<tr>
 <td>i386-unknown-openbsd</td>
 <td>&nbsp;</td>
 <td>Successful (Ada, C, C++, F77, Java, Obj-C):
@@ -131,6 +138,13 @@ Installing GCC: Final Installation</a>.</p>
 <td>GNU as 1.92.3, openbsd ld</td>
 <td>Unsuccessful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01335.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>i586-pc-linux-gnu</td>
+<td>Red Hat 7.1, glibc 2.2.2, kernel 2.4.17</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-07/msg00498.html">3.1</a></td>
 </tr>
 
 <tr>
@@ -486,6 +500,13 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Successful (C, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg02464.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>powerpc-ibm-aix4.1.5.0</td>
+<td>&nbsp;</td>
+<td>Successful (C):
+<a href="http://gcc.gnu.org/ml/gcc/2002-07/msg00559.html">3.1</a></td>
 </tr>
 
 <tr>
