Use MetaHTML's <include> instead of Apache's, which has been recently disabled on gcc.gnu.org.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -257,7 +257,7 @@ microprocessor architecture, extending the existing SH port.
 </tr>
 </table>
 
-<!--#include virtual="/searchbox.ihtml"-->
+<include searchbox.ihtml>
 
 </body>
 </html>
