--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -305,7 +305,7 @@ can do right now.</p>
 the lists</a>.</p>
 
 <a name="searchbox"></a>
-<!--#include virtual="/searchbox.ihtml"-->
+<include searchbox.ihtml>
 
 </body>
 </html>
