Some updates concerning GCC 3.1.1 and 3.3.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -148,10 +148,9 @@ and automated testers</a> to maintain and improve quality.</p>
 </dd>
 
 <dt><strong>Current release series:</strong>
-  <a href="gcc-3.1/">GCC 3.1</a>
+  <a href="gcc-3.1/">GCC 3.1</a>, GCC 3.1.1 scheduled for July 21st 2002
 </dt><dd>
-  Open for all maintainers
-  (<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01212.html">policy</a>)
+  Changes require approval by release manager.
 </dd>
 
 <!--
@@ -164,7 +163,7 @@ and automated testers</a> to maintain and improve quality.</p>
 -->
 
 <dt><strong>Active development (mainline):</strong>
-  will become GCC 3.2
+  will become GCC 3.3
 </dt><dd>
   <a href="develop.html#stage2">Stage 2</a>; open for all maintainers.
 </dd>
