* index.html: Mention contributors to the tree SSA code.

--- a/htdocs/projects/tree-ssa/index.html
+++ b/htdocs/projects/tree-ssa/index.html
@@ -25,6 +25,17 @@ maintained by <a href="mailto:dnovillo@redhat.com">Diego Novillo
 &lt;dnovillo@redhat.com&gt;</a>.  Approval from the usual maintainers will be
 needed when submitting patches from the branch onto the mainline.</p>
 
+<p>Current contributors to this project include:
+<a href="mailto:dberlin@dberlin.org">Daniel Berlin</a>,
+<a href="mailto:fche@redhat.com">Frank Eigler</a>,
+<a href="mailto:bje@redhat.com">Ben Elliston</a>,
+<a href="mailto:aldyh@redhat.com">Aldy Hernandez</a>,
+<a href="mailto:aj@suse.de">Andreas Jaeger</a>,
+<a href="mailto:jason@redhat.com">Jason Merrill</a>,
+<a href="mailto:dnovillo@redhat.com">Diego Novillo</a>,
+<a href="mailto:s.pop@laposte.net">Sebastian Pop</a> and
+<a href="mailto:graham.stott@btinternet.com">Graham Stott</a>.</p>
+
 <hr />
 
 <h2>Table of Contents</h2>
