Added link to DWARF 1.1 spec at the Open Group.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -496,12 +496,11 @@ tahoe. These are listed here just for completeness.
   <li><a href="http://www.arm.com/armwww.ns4/img/12-Technical+Specs-ARM+ELF+Specification+PDF/$File/ARMELFA08.pdf">ARM ELF ABI</a></li>
 
   <li><a href=" http://www.eagercon.com/dwarf/dwarf3std.htm">DWARF 3
-  drafts</a></li>
-
-  <li><a href="http://www.eagercon.com/dwarf/dwarf2std.htm">DWARF 2.1
-  drafts</a></li>
+  drafts (formerly DWARF 2.1)</a></li>
 
   <li><a href="ftp://sgigate.sgi.com/pub/dwarf/">DWARF v2 spec and sample implementation</a></li>
+
+  <li><a href="http://www.opengroup.org/infosrv/plsig/">DWARF 1.1 and 2.06 specs</a></li>
 
   <li><a href="ftp://ftp.sgi.com/sgi/dev/davea/objectinfo.html">Debugging/object info</a> by David B.Anderson (including links to some DWARF tools)</li>
 
