--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -1134,6 +1134,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>vax-dec-ultrix4.3</td>
+<td>&nbsp;</td>
+<td>Successful (C, C++, F77):
+<a href="http://gcc.gnu.org/ml/gcc/2002-07/msg00789.html">3.0.4</a></td>
+</tr>
+
+<tr>
 <td>vax-unknown-netbsd1.5.2</td>
 <td>&nbsp;</td>
 <td>Successful (C):
