Update link to "Internet sites for C++ users".

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -405,7 +405,7 @@ tahoe. These are listed here just for completeness.
 </ul>
 
 <ul>
-  <li><a href="http://webnz.com/robert/cpp_site.html">Internet sites for
+  <li><a href="http://www.robertnz.net/cpp_site.html">Internet sites for
       C++ users</a></li>
 </ul>
 
