Add a note about the x86-64 port

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -74,6 +74,13 @@ can see the <a href="libgcj-classpath-compare.html">status of the merge</a>.)
 <!-- News entries start here -->
 
 <tr><td valign="top">
+<b>July 19, 2002</b>
+</td><td>
+Bo Thorsen, SuSE Labs, has implemented the necessary support in FFI,
+boehm-gc and libjava to get libgcj running on x86-64. This is a big
+step towards getting libgcj fully supported on x86-64.
+</td></tr>
+
 <b>June 24, 2002</b>
 </td><td>
 Tom Tromey has checked in a patch that makes the bytecode interpreter
