--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -148,8 +148,18 @@ and automated testers</a> to maintain and improve quality.</p>
 </dd>
 
 <dt><strong>Current release series:</strong>
-  <a href="gcc-3.1/">GCC 3.1</a>, GCC 3.1.1 scheduled for July 21st 2002
+  <a href="gcc-3.1/">GCC 3.1</a>
 </dt><dd>
+  GCC 3.1.1 scheduled for 2002-07-21; this will be the last 3.1 release,
+  for the 3.1-branch will be renamed to 3.2.
+  <br />
+  Changes require approval by release manager.
+</dd>
+
+<dt><strong>Pending release series:</strong>
+  <a href="gcc-3.2/">GCC 3.2</a> scheduled for 2002-07-2x
+</dt><dd>
+  <br />
   Changes require approval by release manager.
 </dd>
 
