Note C99 status in 3.1 applies to 3.2 as well.

--- a/htdocs/c99status.html
+++ b/htdocs/c99status.html
@@ -19,7 +19,7 @@ paragraph 6) do not count as library issues.</p>
 
 <p>This page describes the C99 support in mainline GCC CVS, not in any
 particular release.  Information is also available on <a
-href="gcc-3.1/c99status.html">C99 support in GCC 3.1</a> and on <a
+href="gcc-3.1/c99status.html">C99 support in GCC 3.1 and 3.2</a> and on <a
 href="gcc-3.0/c99status.html">C99 support in GCC 3.0</a>, but not on
 the much more limited support in GCC 2.95.</p>
 
