--- a/htdocs/gcc-3.1/c99status.html
+++ b/htdocs/gcc-3.1/c99status.html
@@ -1,11 +1,11 @@
 <html>
 
 <head>
-<title>Status of C99 features in GCC 3.1</title>
+<title>Status of C99 features in GCC 3.1 and 3.2</title>
 </head>
 
 <body>
-<h1>Status of C99 features in GCC 3.1</h1>
+<h1>Status of C99 features in GCC 3.1 and 3.2</h1>
 
 <p>This table is based on the list in the foreword to the printed
 standard ISO/IEC 9899:1999 (E), as amended by ISO/IEC
@@ -17,7 +17,7 @@ library support, or desirable in conjunction with it.  Note that the
 headers required of conforming freestanding implementations (clause 4
 paragraph 6) do not count as library issues.</p>
 
-<p>This page describes the C99 support in GCC 3.1.  Information on <a
+<p>This page describes the C99 support in GCC 3.1 and 3.2.  Information on <a
 href="../c99status.html">C99 support in mainline CVS GCC</a> is also
 available.</p>
 
