Fix missing table cell tag.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -81,6 +81,7 @@ boehm-gc and libjava to get libgcj running on x86-64. This is a big
 step towards getting libgcj fully supported on x86-64.
 </td></tr>
 
+<tr><td valign="top">
 <b>June 24, 2002</b>
 </td><td>
 Tom Tromey has checked in a patch that makes the bytecode interpreter
