--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -14,6 +14,26 @@ home page</a>.</p>
 
 <!-- ATTENTION: This page is for *OLD* news! -->
 
+<dt><b>February 25, 2002</b></dt>
+<dd>
+We have branched for GCC 3.1 (<a href="gcc-3.1/criteria.html">release
+criteria</a>, <a href="gcc-3.1/changes.html">changes</a>) and are
+concentrating on bugfixes.  The 3.1 release is
+<a href="develop.html#future">planned for late April</a>.
+</dd>
+
+<dt><b>February 21, 2002</b></dt>
+<dd>
+GCC 3.0.4 has been released.
+</dd>
+
+<dt><b>February 9, 2002</b></dt>
+<dd>
+Alexandre Oliva, of <a href="http://www.redhat.com/">Red Hat,
+Inc.</a>, has contributed a port to the SuperH SH5 64-bit RISC
+microprocessor architecture, extending the existing SH port.
+</dd>
+
 <dt><b>January 24, 2002</b></dt>
 <dd>
 <a href="http://www.tensilica.com/">Tensilica</a> has contributed 
